FIx text-align.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -53,10 +53,7 @@ p {
 
 .text-faded {
     color: rgba(white, .7);
-    text-align: center;
-    p {
-        text-align: justify;
-    }
+    text-align: justify;
 }
 
 section {
